Converted knowfox/knowfox into package

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "laravel/jetstream": "^1.4",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "knowfox/knowfox": "dev-minimal-change",
+        "knowfox/entangle": "dev-minimal-change"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
