--- a/package.json
+++ b/package.json
@@ -12,12 +12,26 @@
     "devDependencies": {
         "@tailwindcss/ui": "^0.5.0",
         "axios": "^0.19",
+        "bootstrap-sass": "^3.4.1",
         "cross-env": "^7.0",
+        "dropzone": "^5.7.2",
+        "epubjs": "^0.3.88",
+        "featherlight": "^1.7.14",
+        "jqtree": "^1.5.1",
+        "jquery": "^3.5.1",
+        "jquery-resizable": "^1.0.6",
+        "jquery-ui": "^1.12.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
+        "selectize": "^0.12.6",
+        "simplemde": "^1.11.2",
+        "snackbar": "^1.1.0",
         "tailwindcss": "^1.3.0",
+        "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
     }
 }
