--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/knowfox.js": "/js/knowfox.js",
+    "/css/knowfox.css": "/css/knowfox.css",
     "/css/app.css": "/css/app.css"
 }
