--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "simplemde": "^1.11.2",
         "snackbar": "^1.1.0",
         "tailwindcss": "^1.3.0",
+        "v-calendar": "^1.0.8",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
     }
