--- a/package.json
+++ b/package.json
@@ -18,6 +18,25 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "tailwindcss": "^2.0.1"
+    },
+    "dependencies": {
+        "bootstrap-sass": "^3.4.1",
+        "dropzone": "^5.9.2",
+        "featherlight": "^1.7.14",
+        "jqtree": "^1.6.0",
+        "jquery": "^3.6.0",
+        "jquery-resizable": "^1.0.6",
+        "jquery-ui": "^1.12.1",
+        "selectize": "^0.12.6",
+        "simplemde": "^1.11.2",
+        "snackbar": "^1.1.0",
+        "v-calendar": "^2.3.0",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
     }
 }
