--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^4.0.0",
+        "sass": "^1.37.0",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^2.0.2"
     },
