--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.1.0",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
@@ -30,11 +30,15 @@
         "jqtree": "^1.6.1",
         "jquery": "^3.6.0",
         "jquery-resizable": "^1.0.6",
-        "jquery-ui": "^1.12.1",
+        "jquery-ui": "^1.13.0",
         "node-sass": "^6.0.1",
+        "nth-check": "^2.0.1",
+        "object-path": "^0.11.8",
+        "path-parse": "^1.0.7",
         "selectize": "^0.12.6",
         "simplemde": "^1.11.2",
         "snackbar": "^1.1.0",
+        "url-parse": "^1.5.4",
         "v-calendar": "^2.3.2",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.7",
