Added --legacy-peer-deps to npm

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "knowfox/knowfox": "dev-minimal-change",
+        "laravel/envoy": "^2.7",
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
