--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
-        "knowfox/knowfox": "dev-main",
+        "knowfox/knowfox": "dev-master",
         "laravel/envoy": "^2.8",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.2",
