--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "league/flysystem-sftp": "^3.15",
+        "league/flysystem-sftp-v3": "^3.15",
         "predis/predis": "^2.2"
     },
     "require-dev": {
